# CICD_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lint.yml  pr.yml  unit-tests.yml
cicd_template/: __init__.py  my_module.py
src/: my_module.py
tests/: test_functions.py
