[tool.poetry]
name = "cicd-template"
version = "0.1.0"
description = "A template for CI/CD development tools."
authors = ["nicklamiller <nicklamiller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.1"
python = "^3.12"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"
mypy = "^1.10.0"
pandas-stubs = "^2.2.2"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
ruff = "^0.4.7"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle - Error
    "I", # isort
    "F", # Pyflakes
    "PT", # flake8-pytest-style
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
