[project]
name = "cicd-template"
version = "0.1.0"
description = "A template for CI/CD development tools."
authors = [{ name = "nicklamiller", email = "nicklamiller@gmail.com" }]
requires-python = "==3.13.*"
readme = "README.md"
dependencies = [
    "numpy>=1.26.4,<2",
    "pandas>=2.2.2,<3",
    "pydantic>=2.7.1,<3",
    "scikit-learn>=1.4.2,<2",
    "statsmodels>=0.14.2,<0.15",
]

[dependency-groups]
dev = [
    "coverage>=7.5.1,<8",
    "mypy>=1.10.0,<2",
    "pandas-stubs>=2.2.2,<3",
    "pre-commit>=3.7.1,<4",
    "pytest>=8.2.1,<9",
    "ruff>=0.4.7,<0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle - Error
    "I", # isort
    "F", # Pyflakes
    "PT", # flake8-pytest-style
]
